tweaked footer nav to fix alignment of social share buttons

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -393,8 +393,8 @@ body{
 		margin-top: 4em;
 		display: flex;
 		flex-direction: row;
-		align-items: flex-end;
-		bottom: 1em;
+		align-items: center;
+		bottom: 0.1em;
 		position: absolute;
 		z-index: 999;
 	}
@@ -405,7 +405,7 @@ body{
 		list-style: none;
 		margin-left: auto;
 		padding-right: 2%;
-		align-items: flex-end;
+		/* align-items: center; */
 	}
 
 	.sound {
@@ -414,6 +414,7 @@ body{
 
 	.footnav li {
 		margin-left: 1em;
+		align-self: end;
 	}
 
 	/* .footnav li a {
